force-app/main/default/objects/LV_CS002_SearchParameters__c/LV_CS002_SearchParameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>LV : This is where the SOSL/SOQL service can be determined to use SOQL, SOSL or Automatic choice</description>
    <label>LV_CS002_SearchParameters</label>
</CustomObject>