force-app/main/default/objects/LV_CS002_SearchParameters__c/fields/Automatic__c.field-meta.xml
<CustomField>
    <fullName>Automatic__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This determines whether the query from LV_ClientSearchService.cls will be automatically determined by the set of rules defining the query.
Important notice!! When this record is checked, all other records in the custom settings must be unchecked.</description>
    <label>Automatic</label>
    <type>Checkbox</type>
</CustomField>