force-app/main/default/objects/LV_CS002_SearchParameters__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <description>The limit of records to retrieve via the query by default</description>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>