force-app/main/default/objects/LV_CS002_SearchParameters__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This determines whether the query from LV_ClientSearchService.cls will be a SOQL query by default. 
Important notice!! When this record is checked, all other records in the custom settings must be unchecked.</description>
    <label>SOQL</label>
    <type>Checkbox</type>
</CustomField>